[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hospicedog", email = "github.exes826@passinbox.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.27",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
